[gd_scene load_steps=24 format=2]

[ext_resource path="res://cameras/zoom_camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/circuit_control.tscn" type="PackedScene" id=2]
[ext_resource path="res://cameras/chase_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/materials/sand.material" type="Material" id=4]
[ext_resource path="res://circuits/road_start.tscn" type="PackedScene" id=5]
[ext_resource path="res://circuits/road_straight_long.tscn" type="PackedScene" id=6]
[ext_resource path="res://circuits/road_corner_large_sand.tscn" type="PackedScene" id=7]
[ext_resource path="res://circuits/road_curved.tscn" type="PackedScene" id=8]
[ext_resource path="res://circuits/road_corner_large_border.tscn" type="PackedScene" id=9]
[ext_resource path="res://circuits/road_straight.tscn" type="PackedScene" id=10]
[ext_resource path="res://circuits/grand_stand_covered.tscn" type="PackedScene" id=11]
[ext_resource path="res://circuits/grand_stand_covered_round.tscn" type="PackedScene" id=12]
[ext_resource path="res://circuits/pits_office.tscn" type="PackedScene" id=13]
[ext_resource path="res://circuits/overhead_round_colored.tscn" type="PackedScene" id=14]
[ext_resource path="res://circuits/pits_office_roof.tscn" type="PackedScene" id=15]
[ext_resource path="res://circuits/barrier_wall.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/materials/road.material" type="Material" id=17]
[ext_resource path="res://circuits/mexico_circuit.gd" type="Script" id=18]

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.835294, 0.839216, 0.415686, 1 )
sky_horizon_color = Color( 0.823529, 0.470588, 0.258824, 1 )
ground_bottom_color = Color( 0.960784, 0.886275, 0.588235, 1 )
ground_horizon_color = Color( 0.784314, 0.705882, 0.341176, 1 )
ground_curve = 0.0527803
sun_color = Color( 0.898039, 0.858824, 0.643137, 1 )
sun_latitude = 5.0
sun_longitude = -60.0
sun_angle_min = 14.62
sun_curve = 0.131951

[sub_resource type="Environment" id=1]
background_mode = 2
background_sky = SubResource( 2 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 200, 200 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 100, 0, 100, -100, 0, 100, -100, 0, -100, 100, 0, -100 )

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 25, 55 )

[node name="MexicoCircuit" type="Spatial"]
script = ExtResource( 18 )

[node name="CircuitControl" parent="." instance=ExtResource( 2 )]

[node name="ZoomCamera" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 17.347, 35, 35 )
current = true

[node name="ChaseCamera" parent="." instance=ExtResource( 3 )]

[node name="World" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.649519, 0.125, -0.75, -0.433013, 0.75, 0.5, 0.625, 0.649519, -0.433013, 0, 35, -60 )
light_color = Color( 0.870588, 0.678431, 0.560784, 1 )
shadow_enabled = true

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 43.0176, 0, -34.9252 )

[node name="Mesh" type="MeshInstance" parent="Ground"]
mesh = SubResource( 3 )
material/0 = ExtResource( 4 )

[node name="Collision" type="CollisionShape" parent="Ground"]
shape = SubResource( 4 )

[node name="P1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.362, 0.057, 1.23 )

[node name="P2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.638, 0.057, 3.73 )

[node name="P3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.362, 0.057, 6.23 )

[node name="P4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.638, 0.057, 8.73 )

[node name="RoadStart" parent="." instance=ExtResource( 5 )]

[node name="RoadStraightLong_1" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -9.68841 )

[node name="RoadStraightLong_2" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -20 )

[node name="RoadStraightLong_3" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -30 )

[node name="RoadStraightLong_4" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -40 )

[node name="RoadCornerLargeSand_5" parent="." instance=ExtResource( 7 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.01, -50 )

[node name="RoadStraight_6" parent="." instance=ExtResource( 10 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 10, 0.01, -60 )

[node name="RoadCornerLargeSand_7" parent="." instance=ExtResource( 7 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 25, 0.01, -65 )

[node name="RoadCurved_8" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 20, 0.01, -65 )

[node name="RoadCurved_9" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 17.5, 0.01, -75 )

[node name="RoadCornerLargeBorder_10" parent="." instance=ExtResource( 9 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 15, 0.01, -85 )

[node name="RoadCornerLargeBorder_11" parent="." instance=ExtResource( 9 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 25, 0.01, -95 )

[node name="RoadCurved_12" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 32.5, 0.01, -75 )

[node name="RoadCurved_13" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 35, 0.01, -65 )

[node name="RoadStraightLong_14" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 35, 0.01, -55 )

[node name="RoadStraightLong_15" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 35, 0.01, -45 )

[node name="RoadCornerLargeBorder_16" parent="." instance=ExtResource( 9 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 45, 0.01, -35 )

[node name="RoadCurved_17" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 45, 0.01, -40 )

[node name="RoadCornerLargeBorder_18" parent="." instance=ExtResource( 9 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 55, 0.01, -42.5 )

[node name="RoadCornerLargeBorder_19" parent="." instance=ExtResource( 9 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 65, 0.01, -32.5 )

[node name="RoadCurved_20" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 45, 0.01, -25 )

[node name="RoadCornerLargeBorder_21" parent="." instance=ExtResource( 9 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 35, 0.01, -15 )

[node name="RoadStraightLong_22" parent="." instance=ExtResource( 6 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 35, 0.01, -5 )

[node name="RoadCurved_23" parent="." instance=ExtResource( 8 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 37.5, 0.01, 5 )

[node name="RoadCornerLargeSand_24" parent="." instance=ExtResource( 7 )]
transform = Transform( -5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 42.5, 0.01, 5 )

[node name="RoadCurved_25" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 32.5, 0.01, 15 )

[node name="RoadCurved_26" parent="." instance=ExtResource( 8 )]
transform = Transform( -2.18557e-07, 0, 6.25, 0, 5, 0, -5, 0, -2.73196e-07, 22.5, 0.01, 17.499 )

[node name="RoadCornerLargeSand_27" parent="." instance=ExtResource( 7 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, 10, 0.01, 20 )

[node name="PitsOfficeRoof_1" parent="." instance=ExtResource( 15 )]
transform = Transform( -2.18557e-07, 0, -20, 0, 5, 0, 5, 0, -8.74228e-07, 8, 0, -1 )

[node name="PitsOfficeRoof_2" parent="." instance=ExtResource( 15 )]
transform = Transform( -4.37114e-07, 0, -20, 0, 5, 0, 10, 0, -8.74228e-07, 8, 0, -16 )

[node name="PitsOfficeRoof_3" parent="." instance=ExtResource( 15 )]
transform = Transform( -4.37114e-07, 0, -20, 0, 5, 0, 10, 0, -8.74228e-07, 8, 0, -31 )

[node name="PitsOfficeRoof_4" parent="." instance=ExtResource( 15 )]
transform = Transform( -4.37114e-07, 0, -20, 0, 5, 0, 10, 0, -8.74228e-07, 8, 0, -46 )

[node name="PitsOffice_1" parent="." instance=ExtResource( 13 )]
transform = Transform( -2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -2.75, 0, 8 )

[node name="PitsOffice_2" parent="." instance=ExtResource( 13 )]
transform = Transform( -4.37114e-07, 0, 5, 0, 5, 0, -10, 0, -2.18557e-07, -2.75, 0, 2.5 )

[node name="GrandStandCovered_1" parent="." instance=ExtResource( 11 )]
transform = Transform( -1.31134e-06, 0, 5, 0, 5, 0, -30, 0, -2.18557e-07, -2.75, 0, -10 )

[node name="GrandStandCovered_2" parent="." instance=ExtResource( 11 )]
transform = Transform( -1.31134e-06, 0, 5, 0, 5, 0, -30, 0, -2.18557e-07, -2.75, 0, -65 )

[node name="GrandStandCovered_3" parent="." instance=ExtResource( 11 )]
transform = Transform( 14.1421, 0, -14.1421, 0, 5, 0, 14.1421, 0, 14.1421, 51, 0, -55.5 )

[node name="GrandStandCoveredRound" parent="." instance=ExtResource( 12 )]
transform = Transform( 14.1421, 0, -14.1421, 0, 5, 0, 14.1421, 0, 14.1421, 65, 0, -41.5 )

[node name="GrandStandCovered_4" parent="." instance=ExtResource( 11 )]
transform = Transform( -14.1421, 0, -14.1421, 0, 5, 0, 14.1421, 0, -14.1421, 64.9722, 0, -23.4554 )

[node name="OverheadRoundColored" parent="." instance=ExtResource( 14 )]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 50, 32.75, 0, -47.5 )

[node name="BarrierWall_1" parent="." instance=ExtResource( 16 )]
transform = Transform( -5.24537e-06, 0, 10, 0, 10, 0, -120, 0, -4.37114e-07, -8, 0, 22.5 )

[node name="BarrierWall_2" parent="." instance=ExtResource( 16 )]
transform = Transform( 100, 0, 0, 0, 10, 0, 0, 0, 10, -8, 0, -97.5002 )

[node name="BarrierWall_3" parent="." instance=ExtResource( 16 )]
transform = Transform( -5.24537e-06, 0, 10, 0, 10, 0, -120, 0, -4.37114e-07, 93.23, 0, 22.5 )

[node name="BarrierWall_4" parent="." instance=ExtResource( 16 )]
transform = Transform( 100, 0, 0, 0, 10, 0, 0, 0, 10, -8, 0, 23.73 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.5, 0.01, -21 )
mesh = SubResource( 5 )
material/0 = ExtResource( 17 )

[connection signal="body_entered" from="RoadStart" to="." method="_on_race_car_entered" binds= [ 0 ]]
[connection signal="body_entered" from="RoadStraightLong_1" to="." method="_on_race_car_entered" binds= [ 1 ]]
[connection signal="body_entered" from="RoadStraightLong_2" to="." method="_on_race_car_entered" binds= [ 2 ]]
[connection signal="body_entered" from="RoadStraightLong_3" to="." method="_on_race_car_entered" binds= [ 3 ]]
[connection signal="body_entered" from="RoadStraightLong_4" to="." method="_on_race_car_entered" binds= [ 4 ]]
[connection signal="body_entered" from="RoadCornerLargeSand_5" to="." method="_on_race_car_entered" binds= [ 5 ]]
[connection signal="body_entered" from="RoadStraight_6" to="." method="_on_race_car_entered" binds= [ 6 ]]
[connection signal="body_entered" from="RoadCornerLargeSand_7" to="." method="_on_race_car_entered" binds= [ 7 ]]
[connection signal="body_entered" from="RoadCurved_8" to="." method="_on_race_car_entered" binds= [ 8 ]]
[connection signal="body_entered" from="RoadCurved_9" to="." method="_on_race_car_entered" binds= [ 9 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder_10" to="." method="_on_race_car_entered" binds= [ 10 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder_11" to="." method="_on_race_car_entered" binds= [ 11 ]]
[connection signal="body_entered" from="RoadCurved_12" to="." method="_on_race_car_entered" binds= [ 12 ]]
[connection signal="body_entered" from="RoadCurved_13" to="." method="_on_race_car_entered" binds= [ 13 ]]
[connection signal="body_entered" from="RoadStraightLong_14" to="." method="_on_race_car_entered" binds= [ 14 ]]
[connection signal="body_entered" from="RoadStraightLong_15" to="." method="_on_race_car_entered" binds= [ 15 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder_16" to="." method="_on_race_car_entered" binds= [ 16 ]]
[connection signal="body_entered" from="RoadCurved_17" to="." method="_on_race_car_entered" binds= [ 17 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder_18" to="." method="_on_race_car_entered" binds= [ 18 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder_19" to="." method="_on_race_car_entered" binds= [ 19 ]]
[connection signal="body_entered" from="RoadCurved_20" to="." method="_on_race_car_entered" binds= [ 20 ]]
[connection signal="body_entered" from="RoadCornerLargeBorder_21" to="." method="_on_race_car_entered" binds= [ 21 ]]
[connection signal="body_entered" from="RoadStraightLong_22" to="." method="_on_race_car_entered" binds= [ 22 ]]
[connection signal="body_entered" from="RoadCurved_23" to="." method="_on_race_car_entered" binds= [ 23 ]]
[connection signal="body_entered" from="RoadCornerLargeSand_24" to="." method="_on_race_car_entered" binds= [ 24 ]]
[connection signal="body_entered" from="RoadCurved_25" to="." method="_on_race_car_entered" binds= [ 25 ]]
[connection signal="body_entered" from="RoadCurved_26" to="." method="_on_race_car_entered" binds= [ 26 ]]
[connection signal="body_entered" from="RoadCornerLargeSand_27" to="." method="_on_race_car_entered" binds= [ 27 ]]
